--- a/final.ipynb
+++ b/final.ipynb
@@ -2,34 +2,40 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Final Project Notebook\n",
-    "# Team Members: [Add names here]\n",
-    "# Dataset: MAGIC Gamma Telescope & California Housing Dataset\n",
-    "\n",
-    "# === Import Libraries ===\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, confusion_matrix\n",
     "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
-    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n"
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "from sklearn.preprocessing import StandardScaler\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train_scaled shape: (13313, 10)\n",
+      "X_val_scaled shape: (2853, 10)\n",
+      "X_test_scaled shape: (2853, 10)\n"
+     ]
+    }
+   ],
    "source": [
     "df = pd.read_csv('data/magic04.data')\n",
     "\n",
-    "X = df.iloc[:, 1:]  # Features\n",
-    "y = df.iloc[:, 0]   # Target (House Value)\n",
+    "X = df.iloc[:, :-1]  # Features\n",
+    "y = df.iloc[:, -1]   # Target\n",
     "\n",
     "# Split the data into train, temp (val+test)\n",
     "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
@@ -37,20 +43,14 @@
     "# Split temp into validation and test\n",
     "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
     "\n",
-    "# Initialize scaler\n",
     "scaler = StandardScaler()\n",
     "\n",
-    "# Fit on train set, transform all sets\n",
     "X_train_scaled = scaler.fit_transform(X_train)\n",
     "X_val_scaled = scaler.transform(X_val)\n",
     "X_test_scaled = scaler.transform(X_test)\n",
     "\n",
-    "# Return as DataFrames if needed\n",
-    "X_train_scaled = pd.DataFrame(X_train_scaled, columns=X.columns)\n",
-    "X_val_scaled = pd.DataFrame(X_val_scaled, columns=X.columns)\n",
-    "X_test_scaled = pd.DataFrame(X_test_scaled, columns=X.columns)\n",
     "\n",
-    "# Output for confirmation\n",
+    "# Confirming everything is okay (size)\n",
     "print(f\"X_train_scaled shape: {X_train_scaled.shape}\")\n",
     "print(f\"X_val_scaled shape: {X_val_scaled.shape}\")\n",
     "print(f\"X_test_scaled shape: {X_test_scaled.shape}\")\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -68,36 +68,36 @@
      "text": [
       "\n",
       "Results for k = 3\n",
-      "accuracy: 0.7522432701894317\n",
-      "precision: 0.7240461401952085\n",
-      "recall: 0.8143712574850299\n",
-      "f1_score: 0.7665570690465007\n",
-      "confusion_matrix: [[816 186]\n",
-      " [311 693]]\n",
+      "accuracy: 0.8002103049421662\n",
+      "precision: 0.8091127098321343\n",
+      "recall: 0.907477138246369\n",
+      "f1_score: 0.8554766734279919\n",
+      "confusion_matrix: [[1687  172]\n",
+      " [ 398  596]]\n",
       "\n",
       "Results for k = 5\n",
-      "accuracy: 0.7666999002991027\n",
-      "precision: 0.7358657243816255\n",
-      "recall: 0.8313373253493014\n",
-      "f1_score: 0.7806935332708529\n",
-      "confusion_matrix: [[833 169]\n",
-      " [299 705]]\n",
+      "accuracy: 0.804416403785489\n",
+      "precision: 0.8055425082198215\n",
+      "recall: 0.9225389994620764\n",
+      "f1_score: 0.8600802407221665\n",
+      "confusion_matrix: [[1715  144]\n",
+      " [ 414  580]]\n",
       "\n",
       "Results for k = 7\n",
-      "accuracy: 0.7602193419740778\n",
-      "precision: 0.7263249348392702\n",
-      "recall: 0.8343313373253493\n",
-      "f1_score: 0.7765908035299582\n",
-      "confusion_matrix: [[836 166]\n",
-      " [315 689]]\n",
+      "accuracy: 0.8138801261829653\n",
+      "precision: 0.807123034227567\n",
+      "recall: 0.9386767079074771\n",
+      "f1_score: 0.8679432976871425\n",
+      "confusion_matrix: [[1745  114]\n",
+      " [ 417  577]]\n",
       "\n",
       "Results for k = 9\n",
-      "accuracy: 0.7627118644067796\n",
-      "precision: 0.7247863247863248\n",
-      "recall: 0.846307385229541\n",
-      "f1_score: 0.7808471454880295\n",
-      "confusion_matrix: [[848 154]\n",
-      " [322 682]]\n"
+      "accuracy: 0.8152821591307395\n",
+      "precision: 0.8057851239669421\n",
+      "recall: 0.9440559440559441\n",
+      "f1_score: 0.8694575179588804\n",
+      "confusion_matrix: [[1755  104]\n",
+      " [ 423  571]]\n"
      ]
     }
    ],
@@ -107,15 +107,15 @@
     "\n",
     "for k in k_values:\n",
     "    knn = KNeighborsClassifier(n_neighbors=k)\n",
-    "    knn.fit(X_train_class, y_train_class)\n",
-    "    y_pred_class = knn.predict(X_val_class)\n",
+    "    knn.fit(X_train, y_train)\n",
+    "    y_pred = knn.predict(X_val)\n",
     "\n",
     "    classification_results[k] = {\n",
-    "        'accuracy': accuracy_score(y_val_class, y_pred_class),\n",
-    "        'precision': precision_score(y_val_class, y_pred_class, pos_label='g'),\n",
-    "        'recall': recall_score(y_val_class, y_pred_class, pos_label='g'),\n",
-    "        'f1_score': f1_score(y_val_class, y_pred_class, pos_label='g'),\n",
-    "        'confusion_matrix': confusion_matrix(y_val_class, y_pred_class)\n",
+    "        'accuracy': accuracy_score(y_val, y_pred),\n",
+    "        'precision': precision_score(y_val, y_pred, pos_label='g', zero_division=0),\n",
+    "        'recall': recall_score(y_val, y_pred, pos_label='g', zero_division=0),\n",
+    "        'f1_score': f1_score(y_val, y_pred, pos_label='g', zero_division=0),\n",
+    "        'confusion_matrix': confusion_matrix(y_val, y_pred)\n",
     "    }\n",
     "\n",
     "# Display results\n",
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -136,44 +136,68 @@
      "text": [
       "\n",
       "Regression Results:\n",
-      "Linear Regression: MSE = 4907211997.374585, MAE = 50790.06027105437\n",
-      "Lasso Regression: MSE = 4907215960.794804, MAE = 50790.32397510188\n",
-      "Ridge Regression: MSE = 4907226928.2478, MAE = 50790.607314504065\n"
+      "Linear Regression: MSE = 4907211997.37478, MAE = 50790.060271050934\n",
+      "Lasso Regression: MSE = 4907228147.161598, MAE = 50790.82762033131\n",
+      "Ridge Regression: MSE = 4907281049.444644, MAE = 50793.61026819888\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "d:\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:678: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 3.417e+13, tolerance: 1.936e+10\n",
+      "d:\\anaconda3\\Lib\\site-packages\\sklearn\\linear_model\\_coordinate_descent.py:678: ConvergenceWarning: Objective did not converge. You might want to increase the number of iterations, check the scale of the features or consider increasing regularisation. Duality gap: 2.132e+13, tolerance: 1.936e+10\n",
       "  model = cd_fast.enet_coordinate_descent(\n"
      ]
     }
    ],
    "source": [
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import LinearRegression, Lasso, Ridge\n",
+    "from sklearn.metrics import mean_squared_error, mean_absolute_error\n",
+    "\n",
+    "# Load data\n",
+    "df = pd.read_csv('data/California_Houses.csv')\n",
+    "\n",
+    "X = df.iloc[:, 1:]  # Features\n",
+    "y = df.iloc[:, 0]   # Target (House Value)\n",
+    "\n",
+    "# Split the data into train, temp (val+test)\n",
+    "X_train, X_temp, y_train, y_temp = train_test_split(X, y, test_size=0.3, random_state=42)\n",
+    "\n",
+    "# Split temp into validation and test\n",
+    "X_val, X_test, y_val, y_test = train_test_split(X_temp, y_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Scale the features (Lasso is sensitive as hell to this)\n",
+    "scaler = StandardScaler()\n",
+    "X_train = scaler.fit_transform(X_train)\n",
+    "X_val = scaler.transform(X_val)\n",
+    "X_test = scaler.transform(X_test)\n",
+    "\n",
     "# Linear Regression\n",
     "lr_model = LinearRegression()\n",
-    "lr_model.fit(X_train_reg, y_train_reg)\n",
+    "lr_model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred_lr = lr_model.predict(X_val_reg)\n",
-    "mse_lr = mean_squared_error(y_val_reg, y_pred_lr)\n",
-    "mae_lr = mean_absolute_error(y_val_reg, y_pred_lr)\n",
+    "y_pred_lr = lr_model.predict(X_val)\n",
+    "mse_lr = mean_squared_error(y_val, y_pred_lr)\n",
+    "mae_lr = mean_absolute_error(y_val, y_pred_lr)\n",
     "\n",
     "# Lasso Regression\n",
     "lasso_model = Lasso(alpha=1.0)\n",
-    "lasso_model.fit(X_train_reg, y_train_reg)\n",
+    "lasso_model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred_lasso = lasso_model.predict(X_val_reg)\n",
-    "mse_lasso = mean_squared_error(y_val_reg, y_pred_lasso)\n",
-    "mae_lasso = mean_absolute_error(y_val_reg, y_pred_lasso)\n",
+    "y_pred_lasso = lasso_model.predict(X_val)\n",
+    "mse_lasso = mean_squared_error(y_val, y_pred_lasso)\n",
+    "mae_lasso = mean_absolute_error(y_val, y_pred_lasso)\n",
     "\n",
     "# Ridge Regression\n",
     "ridge_model = Ridge(alpha=1.0)\n",
-    "ridge_model.fit(X_train_reg, y_train_reg)\n",
+    "ridge_model.fit(X_train, y_train)\n",
     "\n",
-    "y_pred_ridge = ridge_model.predict(X_val_reg)\n",
-    "mse_ridge = mean_squared_error(y_val_reg, y_pred_ridge)\n",
-    "mae_ridge = mean_absolute_error(y_val_reg, y_pred_ridge)\n",
+    "y_pred_ridge = ridge_model.predict(X_val)\n",
+    "mse_ridge = mean_squared_error(y_val, y_pred_ridge)\n",
+    "mae_ridge = mean_absolute_error(y_val, y_pred_ridge)\n",
     "\n",
     "# Store all results\n",
     "regression_results = {\n",
@@ -191,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -201,45 +225,45 @@
       "\n",
       "=== Final Report ===\n",
       "\n",
-      "### Classification Results Summary\n",
+      "Classification Results Summary\n",
       "\n",
-      "**k = 3**\n",
-      "  accuracy: 0.7522432701894317\n",
-      "  precision: 0.7240461401952085\n",
-      "  recall: 0.8143712574850299\n",
-      "  f1_score: 0.7665570690465007\n",
-      "  confusion_matrix: [[816 186]\n",
-      " [311 693]]\n",
+      "k = 3\n",
+      "  accuracy: 0.8002103049421662\n",
+      "  precision: 0.8091127098321343\n",
+      "  recall: 0.907477138246369\n",
+      "  f1_score: 0.8554766734279919\n",
+      "  confusion_matrix: [[1687  172]\n",
+      " [ 398  596]]\n",
       "\n",
-      "**k = 5**\n",
-      "  accuracy: 0.7666999002991027\n",
-      "  precision: 0.7358657243816255\n",
-      "  recall: 0.8313373253493014\n",
-      "  f1_score: 0.7806935332708529\n",
-      "  confusion_matrix: [[833 169]\n",
-      " [299 705]]\n",
+      "k = 5\n",
+      "  accuracy: 0.804416403785489\n",
+      "  precision: 0.8055425082198215\n",
+      "  recall: 0.9225389994620764\n",
+      "  f1_score: 0.8600802407221665\n",
+      "  confusion_matrix: [[1715  144]\n",
+      " [ 414  580]]\n",
       "\n",
-      "**k = 7**\n",
-      "  accuracy: 0.7602193419740778\n",
-      "  precision: 0.7263249348392702\n",
-      "  recall: 0.8343313373253493\n",
-      "  f1_score: 0.7765908035299582\n",
-      "  confusion_matrix: [[836 166]\n",
-      " [315 689]]\n",
+      "k = 7\n",
+      "  accuracy: 0.8138801261829653\n",
+      "  precision: 0.807123034227567\n",
+      "  recall: 0.9386767079074771\n",
+      "  f1_score: 0.8679432976871425\n",
+      "  confusion_matrix: [[1745  114]\n",
+      " [ 417  577]]\n",
       "\n",
-      "**k = 9**\n",
-      "  accuracy: 0.7627118644067796\n",
-      "  precision: 0.7247863247863248\n",
-      "  recall: 0.846307385229541\n",
-      "  f1_score: 0.7808471454880295\n",
-      "  confusion_matrix: [[848 154]\n",
-      " [322 682]]\n",
+      "k = 9\n",
+      "  accuracy: 0.8152821591307395\n",
+      "  precision: 0.8057851239669421\n",
+      "  recall: 0.9440559440559441\n",
+      "  f1_score: 0.8694575179588804\n",
+      "  confusion_matrix: [[1755  104]\n",
+      " [ 423  571]]\n",
       "\n",
-      "### Regression Results Summary\n",
+      "Regression Results Summary\n",
       "\n",
-      "Linear Regression: MSE = 4907211997.374585, MAE = 50790.06027105437\n",
-      "Lasso Regression: MSE = 4907215960.794804, MAE = 50790.32397510188\n",
-      "Ridge Regression: MSE = 4907226928.2478, MAE = 50790.607314504065\n",
+      "Linear Regression: MSE = 4907211997.37478, MAE = 50790.060271050934\n",
+      "Lasso Regression: MSE = 4907228147.161598, MAE = 50790.82762033131\n",
+      "Ridge Regression: MSE = 4907281049.444644, MAE = 50793.61026819888\n",
       "\n"
      ]
     }
@@ -248,7 +272,7 @@
     "print(\"\\n=== Final Report ===\\n\")\n",
     "\n",
     "# Classification Summary\n",
-    "print(\"### Classification Results Summary\\n\")\n",
+    "print(\"Classification Results Summary\\n\")\n",
     "for k, metrics in classification_results.items():\n",
     "    print(f\"k = {k}\")\n",
     "    for metric, value in metrics.items():\n",
@@ -256,7 +280,7 @@
     "    print()\n",
     "\n",
     "# Regression Summary\n",
-    "print(\"### Regression Results Summary\\n\")\n",
+    "print(\"Regression Results Summary\\n\")\n",
     "print(f\"Linear Regression: MSE = {mse_lr}, MAE = {mae_lr}\")\n",
     "print(f\"Lasso Regression: MSE = {mse_lasso}, MAE = {mae_lasso}\")\n",
     "print(f\"Ridge Regression: MSE = {mse_ridge}, MAE = {mae_ridge}\\n\")\n",
